refactor: remove redundant locale preservation, create a dedicated `_dev` feature for rust-analyzer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
   "evenBetterToml.formatter.indentString": "  ",
   "i18n-ally.keystyle": "nested",
   "i18n-ally.localesPaths": ["locales"],
-  "rust-analyzer.cargo.features": ["client", "server"],
+  "rust-analyzer.cargo.features": ["_dev"],
   "rust-analyzer.check.command": "clippy",
   "rust-analyzer.procMacro.ignored": {
     "proc-macros": ["component", "server"]
