refactor: simplify `t_get!` & `t_get_untracked!` macros, simplify feature flags and make them more readable for RA

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,12 @@
   "evenBetterToml.formatter.indentString": "  ",
   "i18n-ally.keystyle": "nested",
   "i18n-ally.localesPaths": ["locales"],
-  "rust-analyzer.cargo.features": ["_dev"],
+  "rust-analyzer.cargo.features": [
+    "csr",
+    "ssr",
+    "_client-deps",
+    "_server-deps"
+  ],
   "rust-analyzer.check.command": "clippy",
   "rust-analyzer.procMacro.ignored": {
     "proc-macros": ["component", "server"]
