--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,8 @@ leptos_i18n = { git = "https://github.com/Baptistemontan/leptos_i18n", rev = "38
   "serde",
   "cookie",
   "interpolate_display",
-] }
+  "yaml_files",
+], default-features = false }
 leptos_meta = { version = "0.5.0", features = ["nightly"] }
 leptos_router = { version = "0.5.0", features = ["nightly"] }
 leptos-use = { version = "0.7.0", features = ["storage"] }
