--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,8 @@ derive_setters = "0.1.6"
 educe = "0.4.23"
 fern = "0.6.2"
 futures = "0.3.28"
-leptos = { version = "0.5.0", features = ["nightly"] }
-leptos_i18n = { git = "https://github.com/Baptistemontan/leptos_i18n", rev = "388738030475d697f76c25ea2e38291957435da6", features = [
+leptos = { version = "0.5.1", features = ["nightly"] }
+leptos_i18n = { version = "0.2.1", features = [
   "nightly",
   "serde",
   "cookie",
