--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
   ],
   "rust-analyzer.check.command": "clippy",
   "rust-analyzer.procMacro.ignored": {
+    "leptos_macro": ["component", "server"],
     "proc-macros": ["component", "server"]
   },
   "rust-analyzer.rustfmt.overrideCommand": ["just", "_vscode-fmt"],
