--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,29 @@
-[package]
-name = "leptos-assembly"
-version = "0.0.0"
-edition = "2021"
-rust-version = "1.73"
-publish = false
-
-[lib]
-crate-type = ["cdylib", "rlib"]
-
 [workspace]
 resolver = "2"
-members = ["src/macros/proc"]
+members = [
+  "apps/main",
+  "packages/client",
+  "packages/client/macros",
+  "packages/client/macros/proc",
+  "packages/server",
+  "packages/common/macros",
+  "packages/common/macros/proc",
+  "packages/common/utils"
+]
 
-[dependencies]
+[workspace.package]
+version = "0.0.0"
+edition = "2021"
+
+[workspace.dependencies]
+client = { path = "packages/client" }
+client-macros = { path = "packages/client/macros" }
+client-proc-macros = { path = "packages/client/macros/proc" }
+server = { path = "packages/server" }
+common-macros = { path = "packages/common/macros" }
+common-proc-macros = { path = "packages/common/macros/proc" }
+common-utils = { path = "packages/common/utils" }
 # full-stack
-proc-macros.path = "src/macros/proc"
 anyhow = "1.0.75"
 cfg-if = "1.0.0"
 derive-getters = "0.3.0"
@@ -57,70 +66,93 @@ web-sys = { version = "0.3.64", features = [
   "Performance",
 ] }
 # client-only
-console_log = { version = "1.0.0", features = ["color"], optional = true }
-getrandom = { version = "0.2.10", features = ["js"], optional = true }
+console_log = { version = "1.0.0", features = ["color"] }
+getrandom = { version = "0.2.10", features = ["js"] }
 # server-only
-axum = { version = "0.6.20", optional = true }
-leptos_axum = { version = "0.5.2", optional = true }
-owo-colors = { version = "3.5.0", optional = true }
-reqwest = { version = "0.11.22", features = ["json"], optional = true }
-tokio = { version = "1.33.0", features = ["full"], optional = true }
-tower = { version = "0.4.13", optional = true }
-tower-http = { version = "0.4.4", features = ["fs"], optional = true }
+axum = { version = "0.6.20" }
+leptos_axum = { version = "0.5.2" }
+owo-colors = { version = "3.5.0" }
+reqwest = { version = "0.11.22", features = ["json"] }
+tokio = { version = "1.33.0", features = ["full"] }
+tower = { version = "0.4.13" }
+tower-http = { version = "0.4.4", features = ["fs"] }
+# proc macros
+proc-macro2 = "1.0.69"
+quote = "1.0.33"
+syn = { version = "2.0.38", features = ["full"] }
 
-[dev-dependencies]
-insta = "1.34.0"
-pretty_assertions = "1.4.0"
-wasm-bindgen-test = "0.3.37"
+# @kw
+# [dev-dependencies]
+# insta = "1.34.0"
+# pretty_assertions = "1.4.0"
+# wasm-bindgen-test = "0.3.37"
+# [features]
+# csr = []
+# ssr = []
+# _client-deps = ["dep:console_log", "dep:getrandom"]
+# _server-deps = [
+#   "dep:axum",
+#   "dep:leptos_axum",
+#   "dep:owo-colors",
+#   "dep:reqwest",
+#   "dep:tokio",
+#   "dep:tower",
+#   "dep:tower-http",
+# ]
+# client = [
+#   "csr",
+#   "_client-deps",
+#   "time/wasm-bindgen",
+#   "leptos/csr",
+#   "leptos_i18n/csr",
+#   "leptos_meta/csr",
+#   "leptos_router/csr",
+# ]
+# server = [
+#   "ssr",
+#   "_server-deps",
+#   "leptos/ssr",
+#   "leptos_animated_for/ssr",
+#   "leptos_meta/ssr",
+#   "leptos_router/ssr",
+#   "leptos_i18n/axum",
+# ]
+# [package.metadata.cargo-all-features]
+# skip_feature_sets = [
+#   ["csr", "ssr"],
+#   ["_client-deps", "_server-deps"],
+#   ["client", "server"],
+# ]
+# [package.metadata.leptos-i18n]
+# default = "en"
+# locales = ["en", "la"]
+# locales-dir = "locales"
+# [package.metadata.leptos]
+# site-root = "target/site"
+# site-pkg-dir = "pkg"
+# assets-dir = "target/prebuild/assets"
+# site-addr = "127.0.0.1:3333"
+# reload-port = 3334
+# watch = false
+# bin-features = ["server"]
+# bin-default-features = false
+# lib-features = ["client"]
+# lib-default-features = false
+# lib-profile-release = "wasm-release"
+[profile.wasm-release]
+inherits = "release"
+opt-level = 'z'
+lto = true
+codegen-units = 1
+panic = "abort"
 
-[features]
-csr = []
-ssr = []
-_client-deps = ["dep:console_log", "dep:getrandom"]
-_server-deps = [
-  "dep:axum",
-  "dep:leptos_axum",
-  "dep:owo-colors",
-  "dep:reqwest",
-  "dep:tokio",
-  "dep:tower",
-  "dep:tower-http",
-]
-client = [
-  "csr",
-  "_client-deps",
-  "time/wasm-bindgen",
-  "leptos/csr",
-  "leptos_i18n/csr",
-  "leptos_meta/csr",
-  "leptos_router/csr",
-]
-server = [
-  "ssr",
-  "_server-deps",
-  "leptos/ssr",
-  "leptos_animated_for/ssr",
-  "leptos_meta/ssr",
-  "leptos_router/ssr",
-  "leptos_i18n/axum",
-]
-
-[package.metadata.cargo-all-features]
-skip_feature_sets = [
-  ["csr", "ssr"],
-  ["_client-deps", "_server-deps"],
-  ["client", "server"],
-]
-
-[package.metadata.leptos-i18n]
-default = "en"
-locales = ["en", "la"]
-locales-dir = "locales"
-
-[package.metadata.leptos]
+[[workspace.metadata.leptos]]
+name = "main"
+bin-package = "main"
+lib-package = "client"
 site-root = "target/site"
 site-pkg-dir = "pkg"
-assets-dir = "target/prebuild/assets"
+# assets-dir = "target/prebuild/assets" # @kw
 site-addr = "127.0.0.1:3333"
 reload-port = 3334
 watch = false
@@ -130,15 +162,8 @@ lib-features = ["client"]
 lib-default-features = false
 lib-profile-release = "wasm-release"
 
-[profile.wasm-release]
-inherits = "release"
-opt-level = 'z'
-lto = true
-codegen-units = 1
-panic = "abort"
-
 [lints.rust]
-unsafe_code = "deny"
+unsafe_code = "deny" # @kw forbid?
 
 [lints.clippy]
 # warn
