--- a/packages/client/Cargo.toml
+++ b/packages/client/Cargo.toml
@@ -38,17 +38,47 @@ unocss-classes.workspace = true
 wasm-bindgen.workspace = true
 web-sys.workspace = true
 # client-only
-console_log.workspace = true
-getrandom.workspace = true
+console_log = { workspace = true, optional = true }
+getrandom = { workspace = true, optional = true }
 # @kw remove below?
 # server-only
-axum.workspace = true
-leptos_axum.workspace = true
-owo-colors.workspace = true
-reqwest.workspace = true
-tokio.workspace = true
-tower.workspace = true
-tower-http.workspace = true
+axum = { workspace = true, optional = true }
+leptos_axum = { workspace = true, optional = true }
+owo-colors = { workspace = true, optional = true }
+reqwest = { workspace = true, optional = true }
+tokio = { workspace = true, optional = true }
+tower = { workspace = true, optional = true }
+tower-http = { workspace = true, optional = true }
+
+[features]
+csr = []
+ssr = []
+_client-deps = ["dep:console_log", "dep:getrandom"]
+_server-deps = [
+  "dep:axum",
+  "dep:leptos_axum",
+  "dep:owo-colors",
+  "dep:reqwest",
+  "dep:tokio",
+  "dep:tower",
+  "dep:tower-http",
+]
+client = [
+  "csr",
+  "_client-deps",
+  "time/wasm-bindgen",
+  "leptos/csr",
+  "leptos_i18n/csr",
+  "leptos_meta/csr",
+  "leptos_router/csr",
+]
+
+[package.metadata.cargo-all-features]
+skip_feature_sets = [
+  ["csr", "ssr"],
+  ["_client-deps", "_server-deps"],
+  ["client", "server"],
+]
 
 [package.metadata.leptos-i18n]
 default = "en"
