--- a/apps/main/Cargo.toml
+++ b/apps/main/Cargo.toml
@@ -12,7 +12,7 @@ path = "main.rs"
 # @kw clean up below
 [dependencies]
 client = { path = "../../packages/client", features = ["server"] }
-common-utils.workspace = true
+common-logger.workspace = true
 # full-stack
 anyhow.workspace = true
 cfg-if.workspace = true
@@ -20,7 +20,6 @@ derive-getters.workspace = true
 derive_more.workspace = true
 derive_setters.workspace = true
 educe.workspace = true
-fern.workspace = true
 futures.workspace = true
 leptos.workspace = true
 leptos_animated_for.workspace = true
