--- a/packages/common/logger/Cargo.toml
+++ b/packages/common/logger/Cargo.toml
@@ -9,11 +9,13 @@ path = "lib.rs"
 
 [dependencies]
 common-macros.workspace = true
-cfg-if.workkspace = true
-console_log = { workkspace = true, optional = true }
-log.workkspace = true
+cfg-if.workspace = true
+console_log = { workspace = true, optional = true }
+log.workspace = true
+time = { workspace = true, optional = true }
 fern = "0.6.2"
+owo-colors = { version = "3.5.0", optional = true }
 
 [features]
 csr = ["dep:console_log"]
-ssr = []
+ssr = ["dep:owo-colors", "dep:time"]
