--- a/packages/client/pages/not_found/Cargo.toml
+++ b/packages/client/pages/not_found/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "client-macros"
+name = "client-page-not-found"
 version.workspace = true
 edition.workspace = true
 publish = false
 
 [lib]
 path = "lib.rs"
-
-[dependencies]
-client-proc-macros.path = "proc"
