--- a/packages/client/globals/Cargo.toml
+++ b/packages/client/globals/Cargo.toml
@@ -8,10 +8,14 @@ publish = false
 path = "lib.rs"
 
 [dependencies]
+client-macros.workspace = true
 common-macros.workspace = true
 leptos.workspace = true
 cfg-if.workspace = true
 derive-getters.workspace = true
+derive_more.workspace = true
+derive_setters.workspace = true
+educe.workspace = true
 serde.workspace = true
 time.workspace = true
 unocss-classes.workspace = true
