--- a/packages/client/layouts/Cargo.toml
+++ b/packages/client/layouts/Cargo.toml
@@ -18,4 +18,5 @@ leptos.workspace = true
 leptos_i18n.workspace = true
 leptos_router.workspace = true
 leptos-use.workspace = true
+paste.workspace = true # @kw dont enforce importing paste
 unocss-classes.workspace = true
