--- a/packages/client/pages/hi/Cargo.toml
+++ b/packages/client/pages/hi/Cargo.toml
@@ -6,3 +6,14 @@ publish = false
 
 [lib]
 path = "lib.rs"
+
+[dependencies]
+client-components.workspace = true
+client-composables.workspace = true
+client-globals.workspace = true
+client-router.workspace = true
+client-stores.workspace = true
+leptos.workspace = true
+leptos_i18n.workspace = true
+leptos_router.workspace = true
+pct-str.workspace = true
