--- a/packages/client/Cargo.toml
+++ b/packages/client/Cargo.toml
@@ -9,46 +9,17 @@ crate-type = ["cdylib", "rlib"]
 path = "lib.rs"
 
 [dependencies]
-client-macros.workspace = true
+client-app.path = "app"
 common-macros.workspace = true
 common-logger.workspace = true
-common-utils.workspace = true
-# full-stack
-anyhow.workspace = true
-cfg-if.workspace = true
-derive-getters.workspace = true
-derive_more.workspace = true
-derive_setters.workspace = true
-educe.workspace = true
-futures.workspace = true
 leptos.workspace = true
 leptos_animated_for.workspace = true
 leptos_i18n.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
-leptos-use.workspace = true
-log.workspace = true
-paste.workspace = true
-pct-str.workspace = true
-rand.workspace = true
-serde.workspace = true
-serde_json.workspace = true
-thiserror.workspace = true
 time.workspace = true
-unocss-classes.workspace = true
 wasm-bindgen.workspace = true
-web-sys.workspace = true
-# client-only
-console_log = { workspace = true, optional = true }
 getrandom = { workspace = true, optional = true }
-# @kw remove below?
-# server-only
-axum = { workspace = true, optional = true }
-leptos_axum = { workspace = true, optional = true }
-reqwest = { workspace = true, optional = true }
-tokio = { workspace = true, optional = true }
-tower = { workspace = true, optional = true }
-tower-http = { workspace = true, optional = true }
 
 [features]
 csr = [
