--- a/packages/client/app/Cargo.toml
+++ b/packages/client/app/Cargo.toml
@@ -28,3 +28,10 @@ leptos_router.workspace = true
 leptos-use.workspace = true
 paste.workspace = true # @kw dont enforce importing paste
 unocss-classes.workspace = true
+
+[features]
+csr = []
+ssr = []
+
+[package.metadata.cargo-all-features]
+skip_feature_sets = [["csr", "ssr"]]
