refactor: architecture wip

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,11 @@
     "leptos_macro": ["component", "server"],
     "proc-macros": ["component", "server"]
   },
-  "rust-analyzer.rustfmt.overrideCommand": ["just", "_vscode-fmt"],
+  "rust-analyzer.rustfmt.overrideCommand": [
+    "just",
+    "--unstable",
+    "_vscode-fmt"
+  ],
   "[toml]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
