--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,7 +110,7 @@ bin-package = "main"
 lib-package = "client"
 site-root = "target/site"
 site-pkg-dir = "pkg"
-# assets-dir = "target/prebuild/assets" # @kw
+assets-dir = "target/client-prebuild"
 site-addr = "127.0.0.1:3333"
 reload-port = 3334
 watch = false
