--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
-  "apps/main",
+  "apps/core",
   "packages/client",
   "packages/client/app",
   "packages/client/components",
@@ -105,8 +105,8 @@ codegen-units = 1
 panic = "abort"
 
 [[workspace.metadata.leptos]]
-name = "main"
-bin-package = "main"
+name = "core"
+bin-package = "core"
 lib-package = "client"
 site-root = "target/site"
 site-pkg-dir = "pkg"
@@ -119,11 +119,12 @@ lib-features = ["csr"]
 lib-default-features = false
 lib-profile-release = "wasm-release"
 
-[lints.rust]
+[workspace.lints.rust]
 unsafe_code = "deny" # @kw forbid?
 
-[lints.clippy]
+[workspace.lints.clippy]
 # warn
+pedantic = { level = "warn", priority = -1 }
 clone_on_ref_ptr = "warn"
 disallowed_macros = "warn"
 disallowed_methods = "warn"
@@ -145,7 +146,6 @@ mutex_atomic = "warn"
 needless_lifetimes = "warn"
 panic_in_result_fn = "warn"
 partial_pub_fields = "warn"
-pedantic = "warn"
 print_stderr = "warn"
 print_stdout = "warn"
 pub_without_shorthand = "warn"
@@ -174,3 +174,5 @@ verbose_file_reads = "warn"
 # allow
 cast_precision_loss = "allow"
 missing_panics_doc = "allow"
+must_use_candidate = "allow"
+return_self_not_must_use = "allow"
