--- a/packages/client/layouts/Cargo.toml
+++ b/packages/client/layouts/Cargo.toml
@@ -15,7 +15,7 @@ client-components.workspace = true
 client-composables.workspace = true
 client-env.workspace = true
 client-globals.workspace = true
-client-macros.workspace = true
+client-i18n.workspace = true
 client-router.workspace = true
 leptos.workspace = true
 leptos_i18n.workspace = true
