--- a/packages/client/pages/404/Cargo.toml
+++ b/packages/client/pages/404/Cargo.toml
@@ -14,6 +14,7 @@ path = "lib.rs"
 client-components.workspace = true
 client-composables.workspace = true
 client-globals.workspace = true
+client-i18n.workspace = true
 client-router.workspace = true
 leptos.workspace = true
 leptos_i18n.workspace = true
