--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ client-utils = { path = "packages/client/utils" }
 common-macros = { path = "packages/common/macros" }
 common-utils = { path = "packages/common/utils" }
 common-logger = { path = "packages/common/logger" }
+server = { path = "packages/server" }
 # full-stack
 anyhow = "1.0.75"
 cfg-if = "1.0.0"
@@ -89,7 +90,6 @@ getrandom = { version = "0.2.10", features = ["js"] }
 # server-only
 axum = { version = "0.6.20" }
 leptos_axum = { version = "0.5.2" }
-reqwest = { version = "0.11.22", features = ["json"] }
 tokio = { version = "1.33.0", features = ["full"] }
 tower = { version = "0.4.13" }
 tower-http = { version = "0.4.4", features = ["fs"] }
