--- a/packages/server/Cargo.toml
+++ b/packages/server/Cargo.toml
@@ -9,3 +9,9 @@ workspace = true
 
 [lib]
 path = "lib.rs"
+
+[dependencies]
+common-macros.workspace = true
+leptos.workspace = true
+reqwest = { version = "0.11.22", features = ["json"] }
+serde.workspace = true
