--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,10 @@
 {
   "i18n-ally.keystyle": "nested",
-  "i18n-ally.localesPaths": "packages/client/locales",
+  "i18n-ally.localesPaths": "packages/client/i18n/locales",
   "rust-analyzer.check.command": "clippy",
   "rust-analyzer.procMacro.ignored": {
     "leptos_macro": ["component", "server"],
-
-    // @kw this is no longer valid
-    "proc-macros": ["component", "server"]
+    "common-proc-macros": ["component", "server"]
   },
   "rust-analyzer.rustfmt.overrideCommand": ["just", "_vscode-fmt"],
   "[toml]": {
